--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h5 {
     color: #7450fe;
 }
 
-.bi-star-fill, .bi-star-half, .bi-star {
+.bi-star-fill, .bi-star-half, .bi-star, .review {
     color:#feaa45 ;
 }
 
